--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 			<div class="slides">
 
 				<section>
-					<h2>Jupyter notebook and SageMathCloud</h2>
-					<h3>A new way to teach computation</h3>
+					<h2>Open Data Science Initiative at Sheffield</h2>
 
 					<p>Mike Croucher</p>
 						<p>EPSRC Research Software Engineering Fellow</p>
@@ -58,6 +57,43 @@
 												<a href="http://rse.shef.ac.uk">Research Software Engineering at Sheffield</a>
 					</p>
 				</section>
+
+				<section>
+					The idea of <a href="http://opendsi.cc/">open data science</a> is to:
+          <ol>
+	        <li> Make new analysis methodologies available as widely and rapidly as possible with as few conditions on their use as possible.
+	        <li> Educate our commercial, scientific and medical partners in the use of these latest methodologies.
+	        <li> Act to achieve a balance between data sharing for societal benefit and the right of an individual to own their data.
+				</ol>
+				</section>
+				<section>
+					<h2>How do we achieve this?</h2>
+				</section>
+        <section>
+					<h2> The Data Hide</h2>
+					<p>Open Data Science meet ups at Sheffield</p>
+		     <img src="data_hide1.jpg">
+				</section>
+
+				<section>
+					<h2> The Data Hide</h2>
+					<p>Open Data Science meet ups at Sheffield</p>
+				 <img src="data_hide2.jpg">
+				</section>
+
+				<section>
+					<h2> The Data Hide</h2>
+					<p>Open Data Science meet ups at Sheffield</p>
+				 <img src="data_hide3.jpg">
+				</section>
+
+				<section>
+					<h2>Software</h2>
+				</section>
+      <section>
+				<h2>Jupyter notebook and SageMathCloud</h2>
+				<h3>A new way to teach computation</h3>
+			</section>
 
 				<section data-background="jupyter.png" data-background-size="contain">
 				</section>
