--- a/index.html
+++ b/index.html
@@ -72,19 +72,26 @@
         <section>
 					<h2> The Data Hide</h2>
 					<p>Open Data Science meet ups at Sheffield</p>
-		     <img src="data_hide1.jpg">
+		     <img src="data_hide2.jpg">
 				</section>
 
 				<section>
-					<h2> The Data Hide</h2>
-					<p>Open Data Science meet ups at Sheffield</p>
-				 <img src="data_hide2.jpg">
-				</section>
-
-				<section>
-					<h2> The Data Hide</h2>
+					<h2>The Data Hide</h2>
 					<p>Open Data Science meet ups at Sheffield</p>
 				 <img src="data_hide3.jpg">
+				</section>
+
+				<section>
+					<h2>The Data Hide</h2>
+					<p>Open Data Science meet ups at Sheffield</p>
+				 <img src="stafford_tweet.png">
+				</section>
+
+
+				<section>
+					<h2>The Data Hide</h2>
+					<p>Open Data Science meet ups at Sheffield</p>
+				 <img src="data_hide1.jpg">
 				</section>
 
 				<section>
