--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
 				<section>
 					<h2>Software</h2>
 				</section>
+
+				<section>
+					<h2>2 Research Software Engineering Fellows in Sheffield</h2>
+					<h3>First Fellowship of its kind</h3>
+					<a href="https://www.shef.ac.uk/dcs/latest-news/richmond-and-croucher-awarded-epsrc-rse-fellowships-1.540914"><img src="Fellowship.png"></a>
+				</section>
+
+				<section data-background="RSE_Sheffield.png" data-background-size="contain">
+				</section>
+
+				<section data-background="RSE_launch.png" data-background-size="contain">
+				</section>
       <section>
 				<h2>Jupyter notebook and SageMathCloud</h2>
 				<h3>A new way to teach computation</h3>
