--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
 					<h2>The Data Hide</h2>
 					<p>Open Data Science meet ups at Sheffield</p>
 				 <img src="data_hide1.jpg">
+				</section
+
+				<section>
+					Education
 				</section>
+
+					<section data-background="Gaussian_Process_Summer.png" data-background-size="contain">
+					</section>
 
 				<section>
 					<h2>Software</h2>
@@ -109,6 +116,10 @@
 
 				<section data-background="RSE_launch.png" data-background-size="contain">
 				</section>
+
+				<section>
+					<h3>Teaching Support</h3>
+				<section>
       <section>
 				<h2>Jupyter notebook and SageMathCloud</h2>
 				<h3>A new way to teach computation</h3>
