--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				</section
 
 				<section>
-					Education
+					<h2>Education</h2>
 				</section>
 
 					<section data-background="Gaussian_Process_Summer.png" data-background-size="contain">
