--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<h2>The Data Hide</h2>
 					<p>Open Data Science meet ups at Sheffield</p>
 				 <img src="data_hide1.jpg">
-				</section
+			 </section>
 
 				<section>
 					<h2>Education</h2>
