--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 				</section>
 
 				<section>
-					<h2>2 Research Software Engineering Fellows in Sheffield</h2>
-					<h3>First Fellowship of its kind</h3>
+					<p>2 Research Software Engineering Fellows in Sheffield</p>
+					<p>First Fellowship of its kind</p>
 					<a href="https://www.shef.ac.uk/dcs/latest-news/richmond-and-croucher-awarded-epsrc-rse-fellowships-1.540914"><img src="Fellowship.png"></a>
 				</section>
 
