--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<h2>Education</h2>
 				</section>
 
-					<section data-background="Gaussian_Process_Summer.png" data-background-size="contain">
+					<section data-background="Gaussian_Process_summer.png" data-background-size="contain">
 					</section>
 
 				<section>
@@ -119,7 +119,7 @@
 
 				<section>
 					<h3>Teaching Support</h3>
-				<section>
+				</section>
       <section>
 				<h2>Jupyter notebook and SageMathCloud</h2>
 				<h3>A new way to teach computation</h3>
