--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 					<section data-background="Gaussian_Process_summer.png" data-background-size="contain">
 					</section>
 
+					<section data-background="dsa.png" data-background-size="contain">
+					</section>
+
+
 				<section>
 					<h2>Software</h2>
 				</section>
