--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
 				<section data-background="notebook_example.png" data-background-size="contain">
 				</section>
 
+				<section data-background="entropy.png".png" data-background-size="contain">
+				</section>
+
+				<section data-background="code_cafe.png".png" data-background-size="contain">
+				</section>
+
 				<section>
 			   <h2>Online demo:</h2>
 				 <p><a href="https://cloud.sagemath.com/#projects/3999d983-e8aa-463c-869a-60500d95d82c/files/KronigPenney.html">https://cloud.sagemath.com/#projects/3999d983-e8aa-463c-869a-60500d95d82c/files/KronigPenney.html</a></p>
