--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
 					<section data-background="dsa.png" data-background-size="contain">
 					</section>
 
+					<section data-background="entropy.png".png" data-background-size="contain">
+					</section>
+
+					<section data-background="code_cafe.png".png" data-background-size="contain">
+					</section>
+
 
 				<section>
 					<h2>Software</h2>
@@ -133,12 +139,6 @@
 				</section>
 
 				<section data-background="notebook_example.png" data-background-size="contain">
-				</section>
-
-				<section data-background="entropy.png".png" data-background-size="contain">
-				</section>
-
-				<section data-background="code_cafe.png".png" data-background-size="contain">
 				</section>
 
 				<section>
@@ -182,6 +182,10 @@
 					<li>Students can work anywhere, on any device, locally or in cloud
 				</ul>
 				</section>
+
+				<section data-background="BMS353.png" data-background-size="contain">
+				</section>
+
 
 				<section>
 					<h2>Managed desktop hell</h2>
