--- a/index.html
+++ b/index.html
@@ -186,6 +186,21 @@
 				<section data-background="BMS353.png" data-background-size="contain">
 				</section>
 
+				<section>
+					<h2>Collaboration bewteen lecturer and RSE</h2>
+					<ul>
+						<li> Marta Milo (lecturer)
+						<li> Mike Croucher (Research Software Engineer)
+					</ul>
+				</section>
+
+        <section>
+					<h2>Bioinformatics for Biomedical Science</h2>
+          <li>Undergraduate course
+					<li>We'll use R in the notebook (R kernel very new at the time)
+					<li>Teach students who've never coded before
+					<li>Zero to Bioinformatics hero in 6 weeks!
+				</section>
 
 				<section>
 					<h2>Managed desktop hell</h2>
