--- a/index.html
+++ b/index.html
@@ -226,7 +226,17 @@
 						<li>Superb support</li>
 						<li>Automatic back-ups</li>
 						<li>Inexpensive</li>
+						<li>Students keep their work after the course</li>
 					</ul>
+				</section>
+				<section>
+					<h2>Collaborative editing of notebooks</h2>
+					<p>Like Google-docs for the notebook!</p>
+				</section>
+        <section>
+					<h2> We ran the entire course in SageMathCloud</h2>
+					<li> No need for Blackboard
+					<li> No need for managed desktop
 				</section>
 				<section>
 					<h2>SageMathCloud usage</h2>
@@ -235,7 +245,7 @@
 				<section>
 					<h2>The Future?</h2>
 					<ul>
-					<li>Fully interactive, computable lecture notes for the entire syllabus
+					<li>Fully interactive, computable lecture notes for the entire syllabus?
 					<li>e.g. <a href="https://cloud.sagemath.com/projects/3999d983-e8aa-463c-869a-60500d95d82c/files/Fourier%20Series.ipynb">Fourier series</a></li>
 					</ul>
 				</section>
