--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 				</section>
 
 				<section>
-					The idea of <a href="http://opendsi.cc/">open data science</a> is to:
+					<h3>The idea of <a href="http://opendsi.cc/">open data science</a> is to:</h3>
           <ol>
-	        <li> Make new analysis methodologies available as widely and rapidly as possible with as few conditions on their use as possible.
-	        <li> Educate our commercial, scientific and medical partners in the use of these latest methodologies.
-	        <li> Act to achieve a balance between data sharing for societal benefit and the right of an individual to own their data.
+	        <li class="fragment current-visible"> Make new analysis methodologies available as widely and rapidly as possible with as few conditions on their use as possible.
+	        <li class="fragment current-visible"> Educate our commercial, scientific and medical partners in the use of these latest methodologies.
+	        <li class="fragment current-visible"> Act to achieve a balance between data sharing for societal benefit and the right of an individual to own their data.
 				</ol>
 				</section>
 				<section>
@@ -122,6 +122,14 @@
 				</section>
 
 				<section data-background="RSE_Sheffield.png" data-background-size="contain">
+				</section>
+
+				<section data-background="ODK.png".png" data-background-size="contain">
+				</section>
+
+				<section>
+					<h2>Hiring soon for the OpenDreamKit post!</h2>
+					<p>Jupyter notebook and High Performance Computing</p>
 				</section>
 
 				<section data-background="RSE_launch.png" data-background-size="contain">
@@ -187,7 +195,7 @@
 				</section>
 
 				<section>
-					<h2>Collaboration bewteen lecturer and RSE</h2>
+					<h2>Collaboration between lecturer and RSE</h2>
 					<ul>
 						<li> Marta Milo (lecturer)
 						<li> Mike Croucher (Research Software Engineer)
